# Mia

./: .gitignore  FULL_DOCS.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cargo/: config.toml
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  chats_history.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: chat.rs  mod.rs  settings.rs  system.rs  translator.rs  window.rs
src/pages/: ChatWindow.tsx  Dashboard.tsx  FloatingIcon.tsx
src/pages/components/: ChatWindow.tsx  Monitor.tsx  Settings.tsx  Sidebar.tsx
src/pages/components/Chat/: ChatInput.tsx  ChatSidebar.tsx  MessageItem.tsx
src/pages/components/UI/: MarkdownResponse.tsx  Settings.tsx  Sidebar.tsx  VRMViewer.tsx
src/store/: modelStore.ts
src/types/: chat.ts
